# Doxygon

./: .gitignore  LICENSE  README.md  build.ps1  config.toml  pyproject.toml  run_doxygon.py
config/: command.toml
docs/: user_guide.md
doxygon/: __init__.py  config_loader.py  main.py
doxygon/builder/: __init__.py  command_lark_builder.py  generated_files.py
doxygon/common/: __init__.py  token_utils.py
doxygon/generator/: __init__.py  generator.py
doxygon/model/: __init__.py  model.py
doxygon/parser/: __init__.py  command_parser.py  command_registry.py  command_transformer.py  diagnostics_scanner.py  dispatcher.py  parsed_command.py
doxygon/preproc/: __init__.py  preproc.py
doxygon/scanner/: __init__.py  language_spec.py  source_scanner.py
examples/adoc-template/: main.adoc
examples/adoc-template/attributes/: initChartNo.adoc
examples/input/: SampleModule.bas
examples/output/: SampleModule.bas.adoc
examples/output/src/: SampleModule.bas
